feat: collects system info from wmi .. build: changed build directory

--- a/Pilot/Pilot.vcxproj
+++ b/Pilot/Pilot.vcxproj
@@ -73,7 +73,32 @@
     </ImportGroup>
 
   <PropertyGroup Label="UserMacros" />
-
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+		<LinkIncremental>true</LinkIncremental>
+		<TargetName>$(ProjectName)</TargetName>
+		<OutDir>$(SolutionDir)build\$(Platform)\$(Configuration)\</OutDir>
+		<IntDir>$(SolutionDir)build\Intermediate\$(Platform)\$(Configuration)\$(ProjectName)\</IntDir>
+		<PreBuildEventUseInBuild>false</PreBuildEventUseInBuild>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+		<LinkIncremental>true</LinkIncremental>
+		<TargetName>$(ProjectName)</TargetName>
+		<OutDir>$(SolutionDir)build\$(Platform)\$(Configuration)\</OutDir>
+		<IntDir>$(SolutionDir)build\Intermediate\$(Platform)\$(Configuration)\$(ProjectName)\</IntDir>
+		<PreBuildEventUseInBuild>false</PreBuildEventUseInBuild>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+		<LinkIncremental>false</LinkIncremental>
+		<OutDir>$(SolutionDir)build\$(Platform)\$(Configuration)\</OutDir>
+		<IntDir>$(SolutionDir)build\Intermediate\$(Platform)\$(Configuration)\$(ProjectName)\</IntDir>
+		<PreBuildEventUseInBuild>false</PreBuildEventUseInBuild>
+	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+		<LinkIncremental>false</LinkIncremental>
+		<OutDir>$(SolutionDir)build\$(Platform)\$(Configuration)\</OutDir>
+		<IntDir>$(SolutionDir)build\Intermediate\$(Platform)\$(Configuration)\$(ProjectName)\</IntDir>
+		<PreBuildEventUseInBuild>false</PreBuildEventUseInBuild>
+	</PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -131,7 +156,11 @@
     </Link>
   </ItemDefinitionGroup>
 
-  <ItemGroup></ItemGroup>
+  <ItemGroup>
+	  <ClCompile Include="src\main.cpp" />
+	  <ClCompile Include="src\Helpers\*.cpp" />
+	  <ClCompile Include="src\Monitors\*.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
